# RecruitAI

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
notebooks/: teste.ipynb
src/: recruitai.py  utils.py
webapp/: app.py  pdf.py  requirements.txt
