[tool.poetry]
name = "hackathon"
version = "0.1.0"
description = ""
authors = ["Ramon Medeiro <r.medeiro10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.18"
langchain = "^0.0.281"
openai = "^0.28.0"
tiktoken = "^0.4.0"
pandas = "^2.1.0"
streamlit = "^1.26.0"
pypdf = "^3.15.5"
pypdf2 = "^3.0.1"
fpdf = "^1.7.2"
reportlab = "^4.0.4"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
